tests/paczka1/fuzzy1/19768204.err
Error in line 1: ?S>96
Error in line 15: pwyW5D S496 36,3
Error in line 20: 9xsXGft3jn A656 93,3
Error in line 26: pwyW5D A656 -2,8
Error in line 14: x2YA S496 102,8
Error in line 37: x2YA A656 11,3
Error in line 18: pwyW5D A656 23,8
